--- a/mrzhang-homework/pom.xml
+++ b/mrzhang-homework/pom.xml
@@ -6,7 +6,11 @@
 
   <groupId>com.gupao.learner.mrzhang</groupId>
   <artifactId>mrzhang-homework</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>practice-180502-demo-plugin</module>
+  </modules>
 
   <name>mrzhang-homework</name>
   <!-- FIXME change it to the project's website -->
