--- a/mrzhang-homework/practice-180502-demo-plugin/pom.xml
+++ b/mrzhang-homework/practice-180502-demo-plugin/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>practice-180502-demo-plugin</artifactId>
+    <packaging>maven-plugin</packaging>
 
     <name>practice-180502-demo-plugin</name>
 
@@ -50,6 +51,10 @@
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
