--- a/mrzhang-homework/practice-180502-demo-plugin-client/pom.xml
+++ b/mrzhang-homework/practice-180502-demo-plugin-client/pom.xml
@@ -31,6 +31,12 @@
     </dependencies>
 
     <build>
+        <plugins>
+            <plugin>
+                <artifactId>mrzhang-homework</artifactId>
+                <groupId>com.gupao.learner.mrzhang</groupId>
+            </plugin>
+        </plugins>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
@@ -61,6 +67,12 @@
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
+                </plugin>
+
+                <plugin>
+                    <artifactId>mrzhang-homework</artifactId>
+                    <groupId>com.gupao.learner.mrzhang</groupId>
+                    <version>1.0-SNAPSHOT</version>
                 </plugin>
             </plugins>
         </pluginManagement>
