--- a/summary-home/pom.xml
+++ b/summary-home/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>summary-annotations</module>
+        <module>summary-generator-plugins</module>
     </modules>
 
     <name>summary-home</name>
