--- a/summary-home/summary-generator-plugins/pom.xml
+++ b/summary-home/summary-generator-plugins/pom.xml
@@ -14,6 +14,7 @@
     <name>summary-generator-plugins</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
+    <packaging>maven-plugin</packaging>
 
     <dependencies>
         <dependency>
@@ -24,6 +25,12 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ly.maker</groupId>
+            <artifactId>summary-annotations</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
